syntax = "proto3";

package secret_scanner;
option go_package = "github.com/deepfence/agent-plugin-grpc/proto";

service SecretScanner {
    rpc FindSecretInfo(FindRequest) returns (FindResult);
}

message DockerImage {
    string name = 1;
    string id = 2;
}

message FindRequest {
    oneof input {
        string path = 1;
        DockerImage image = 2;
    }
}

message FindResult {
    oneof input {
        string path = 1;
        DockerImage image = 2;
    }
    string timestamp = 3;
    repeated SecretInfo secrets = 4;
}

message MatchRule {
    int32  id = 1;
    string name = 2;
    string part = 3;
    string string_to_match = 4;
    string signature_to_match = 5;
}

message Match {
    int64  starting_index = 1;
    int64  relative_starting_index = 2;
    int64  relative_ending_index = 3;
    string full_filename = 4;
    string matched_content = 5;
}

message Severity {
    string level = 1;
    float  score = 2;
}

message SecretInfo {
    string    image_layer_id = 1;
    MatchRule rule = 2;
    Match     match = 3;
    Severity  severity = 4;
}
